--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ async-generator==1.10
 async-timeout==3.0.1
 attrs==20.2.0
 backcall==0.2.0
+black==20.8b1
 bleach==3.2.1
 boto3==1.16.26
 botocore==1.19.26
@@ -20,8 +21,6 @@ cachelib==0.1.1
 cachetools==4.1.1
 certifi==2020.11.8
 cffi==1.14.4
-chardet==3.0.4
-click==7.1.2
 cloudpickle==1.4.1
 colorclass==2.2.0
 coloredlogs==14.0
@@ -40,7 +39,6 @@ filelock==3.0.12
 Flask==1.1.2
 Flask-Session==0.3.2
 Flask-SocketIO==4.3.1
-future==0.18.2
 gast==0.3.3
 gevent==20.9.0
 gevent-websocket==0.10.1
@@ -52,11 +50,9 @@ grpcio==1.33.2
 h11==0.9.0
 h5py==2.10.0
 httpcore==0.11.1
-httplib2==0.18.1
 httptools==0.1.1
 httpx==0.15.4
 humanfriendly==9.0
-idna==2.10
 ipykernel==5.3.4
 ipython==7.19.0
 ipython-genutils==0.2.0
@@ -79,12 +75,12 @@ Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
 Markdown==3.3.3
-MarkupSafe==1.1.1
 matplotlib==3.3.3
 mattermostwrapper==2.2
 mccabe==0.6.1
 mistune==0.8.4
 multidict==4.7.6
+mypy-extensions==0.4.3
 nbclient==0.5.1
 nbconvert==6.0.7
 nbformat==5.0.8
@@ -93,16 +89,18 @@ networkx==2.5
 notebook==6.1.5
 numpy==1.18.5
 oauth2client==4.1.3
-oauthlib==3.1.0
 opt-einsum==3.3.0
 packaging==20.7
 pamqp==2.3.0
+pandas==1.2.3
 pandocfilters==1.4.3
 parso==0.7.1
+pathspec==0.8.1
 pbr==5.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.0.1
+plotly==4.14.3
 prometheus-client==0.9.0
 prompt-toolkit==2.0.10
 protobuf==3.14.0
@@ -113,19 +111,16 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 pydot==1.4.1
 Pygments==2.7.3
-PyJWT==1.7.1
 pykwalify==1.7.0
 pylint==2.6.0
 pymongo==3.10.1
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-crfsuite==0.9.7
-python-dateutil==2.8.1
 python-engineio==3.13.2
 python-socketio==4.6.0
 python-telegram-bot==12.8
 pytz==2020.4
-PyYAML==5.3.1
 pyzmq==20.0.0
 questionary==1.5.2
 rasa==2.1.2
@@ -135,6 +130,7 @@ regex==2020.9.27
 requests==2.25.0
 requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
+retrying==1.3.3
 rfc3986==1.4.0
 rocketchat-API==1.9.1
 rsa==4.6
@@ -149,7 +145,6 @@ scikit-learn==0.23.2
 scipy==1.5.4
 Send2Trash==1.5.0
 sentry-sdk==0.19.4
-six==1.15.0
 sklearn-crfsuite==0.3.6
 slackclient==2.9.3
 sniffio==1.2.0
@@ -163,6 +158,7 @@ tensorflow-addons==0.11.2
 tensorflow-estimator==2.3.0
 tensorflow-hub==0.9.0
 tensorflow-probability==0.11.1
+tensorflow-text==2.3.0
 termcolor==1.1.0
 terminado==0.9.1
 terminaltables==3.1.0
@@ -173,10 +169,13 @@ tornado==6.1
 tqdm==4.50.2
 traitlets==5.0.5
 twilio==6.45.4
+typed-ast==1.4.2
 typeguard==2.10.0
+typing-extensions==3.7.4.3
 tzlocal==2.1
 ujson==3.2.0
 urllib3==1.26.2
+uvloop==0.15.2
 virtualenv==20.2.1
 virtualenv-clone==0.5.4
 virtualenvwrapper==4.8.4
