--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ websockets = "8.1"
 black = "^21.5b0"
 docker = "^5.0.0"
 docker-compose = "^1.29.1"
+Sphinx = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
