--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,190 +1,28 @@
-absl-py==0.10.0
-aio-pika==6.7.1
-aiofiles==0.6.0
-aiohttp==3.6.3
-aiormq==3.3.1
-appdirs==1.4.4
-appnope==0.1.2
-APScheduler==3.6.3
-argon2-cffi==20.1.0
-astroid==2.4.2
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==3.0.1
-attrs==20.2.0
-backcall==0.2.0
-black==20.8b1
-bleach==3.2.1
-boto3==1.16.26
-botocore==1.19.26
-cachelib==0.1.1
-cachetools==4.1.1
-certifi==2020.11.8
-cffi==1.14.4
-cloudpickle==1.4.1
-colorclass==2.2.0
-coloredlogs==14.0
-colorhash==1.0.2
-cryptography==3.2.1
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-distlib==0.3.1
-dm-tree==0.1.5
-dnspython==1.16.0
-docopt==0.6.2
-entrypoints==0.3
-fbmessenger==6.0.0
-filelock==3.0.12
-Flask==1.1.2
-Flask-Session==0.3.2
-Flask-SocketIO==4.3.1
-gast==0.3.3
-gevent==20.9.0
-gevent-websocket==0.10.1
-google-auth==1.23.0
-google-auth-oauthlib==0.4.2
-google-pasta==0.2.0
-greenlet==0.4.17
-grpcio==1.33.2
-h11==0.9.0
-h5py==2.10.0
-httpcore==0.11.1
-httptools==0.1.1
-httpx==0.15.4
-humanfriendly==9.0
-ipykernel==5.3.4
-ipython==7.19.0
-ipython-genutils==0.2.0
-isort==5.6.4
-itsdangerous==1.1.0
-jedi==0.17.2
-Jinja2==2.11.2
-jmespath==0.10.0
-joblib==0.15.1
-json5==0.9.5
-jsonpickle==1.4.2
-jsonschema==3.2.0
-jupyter-client==6.1.7
-jupyter-core==4.7.0
-jupyterlab==2.2.9
-jupyterlab-pygments==0.1.2
-jupyterlab-server==1.2.0
-kafka-python==2.0.2
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-lazy-object-proxy==1.4.3
-Markdown==3.3.3
-matplotlib==3.3.3
-mattermostwrapper==2.2
-mccabe==0.6.1
-mistune==0.8.4
-multidict==4.7.6
-mypy-extensions==0.4.3
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.3
-networkx==2.5
-notebook==6.1.5
-numpy==1.18.5
-oauth2client==4.1.3
-opt-einsum==3.3.0
-packaging==20.7
-pamqp==2.3.0
-pandas==1.2.3
-pandocfilters==1.4.3
-parso==0.7.1
-pathspec==0.8.1
-pbr==5.5.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.0.1
-plotly==4.14.3
-prometheus-client==0.9.0
-prompt-toolkit==2.0.10
-protobuf==3.14.0
-psycopg2-binary==2.8.6
-ptyprocess==0.6.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pydot==1.4.1
-Pygments==2.7.3
-pykwalify==1.7.0
-pylint==2.6.0
-pymongo==3.10.1
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-crfsuite==0.9.7
-python-engineio==3.13.2
-python-socketio==4.6.0
-python-telegram-bot==12.8
-pytz==2020.4
-pyzmq==20.0.0
-questionary==1.5.2
-rasa==2.1.2
-rasa-sdk==2.1.2
-redis==3.5.3
-regex==2020.9.27
-requests==2.25.0
-requests-oauthlib==1.3.0
-requests-toolbelt==0.9.1
-retrying==1.3.3
-rfc3986==1.4.0
-rocketchat-API==1.9.1
-rsa==4.6
-ruamel.yaml==0.16.12
-ruamel.yaml.clib==0.2.2
-s3transfer==0.3.3
-sanic==20.9.0
-Sanic-Cors==0.10.0.post3
-sanic-jwt==1.4.1
-Sanic-Plugins-Framework==0.9.4.post1
-scikit-learn==0.23.2
-scipy==1.5.4
-Send2Trash==1.5.0
-sentry-sdk==0.19.4
-sklearn-crfsuite==0.3.6
-slackclient==2.9.3
-sniffio==1.2.0
-SQLAlchemy==1.3.20
-stevedore==3.2.2
-tabulate==0.8.7
-tensorboard==2.4.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.1
-tensorflow-addons==0.11.2
-tensorflow-estimator==2.3.0
-tensorflow-hub==0.9.0
-tensorflow-probability==0.11.1
-tensorflow-text==2.3.0
-termcolor==1.1.0
-terminado==0.9.1
-terminaltables==3.1.0
-testpath==0.4.4
-threadpoolctl==2.1.0
-toml==0.10.2
-tornado==6.1
-tqdm==4.50.2
-traitlets==5.0.5
-twilio==6.45.4
-typed-ast==1.4.2
-typeguard==2.10.0
-typing-extensions==3.7.4.3
-tzlocal==2.1
-ujson==3.2.0
-urllib3==1.26.2
-uvloop==0.15.2
-virtualenv==20.2.1
-virtualenv-clone==0.5.4
-virtualenvwrapper==4.8.4
-wcwidth==0.2.5
-webencodings==0.5.1
-webexteamssdk==1.6
-websockets==8.1
-Werkzeug==1.0.1
-wrapt==1.12.1
-yarl==1.5.1
-zope.event==4.5.0
-zope.interface==5.2.0
+asyncio==3.4.3 \
+    --hash=sha256:b62c9157d36187eca799c378e572c969f0da87cd5fc42ca372d92cdb06e7e1de \
+    --hash=sha256:c46a87b48213d7464f22d9a497b9eef8c1928b68320a2fa94240f969f6fec08c \
+    --hash=sha256:c4d18b22701821de07bd6aea8b53d21449ec0ec5680645e5317062ea21817d2d \
+    --hash=sha256:83360ff8bc97980e4ff25c964c7bd3923d333d177aa4f7fb736b019f26c7cb41
+websockets==8.1; python_full_version >= "3.6.1" \
+    --hash=sha256:3762791ab8b38948f0c4d281c8b2ddfa99b7e510e46bd8dfa942a5fff621068c \
+    --hash=sha256:3db87421956f1b0779a7564915875ba774295cc86e81bc671631379371af1170 \
+    --hash=sha256:4f9f7d28ce1d8f1295717c2c25b732c2bc0645db3215cf757551c392177d7cb8 \
+    --hash=sha256:295359a2cc78736737dd88c343cd0747546b2174b5e1adc223824bcaf3e164cb \
+    --hash=sha256:1d3f1bf059d04a4e0eb4985a887d49195e15ebabc42364f4eb564b1d065793f5 \
+    --hash=sha256:2db62a9142e88535038a6bcfea70ef9447696ea77891aebb730a333a51ed559a \
+    --hash=sha256:0e4fb4de42701340bd2353bb2eee45314651caa6ccee80dbd5f5d5978888fed5 \
+    --hash=sha256:9b248ba3dd8a03b1a10b19efe7d4f7fa41d158fdaa95e2cf65af5a7b95a4f989 \
+    --hash=sha256:ce85b06a10fc65e6143518b96d3dca27b081a740bae261c2fb20375801a9d56d \
+    --hash=sha256:965889d9f0e2a75edd81a07592d0ced54daa5b0785f57dc429c378edbcffe779 \
+    --hash=sha256:751a556205d8245ff94aeef23546a1113b1dd4f6e4d102ded66c39b99c2ce6c8 \
+    --hash=sha256:3ef56fcc7b1ff90de46ccd5a687bbd13a3180132268c4254fc0fa44ecf4fc422 \
+    --hash=sha256:7ff46d441db78241f4c6c27b3868c9ae71473fe03341340d2dfdbe8d79310acc \
+    --hash=sha256:20891f0dddade307ffddf593c733a3fdb6b83e6f9eef85908113e628fa5a8308 \
+    --hash=sha256:c1ec8db4fac31850286b7cd3b9c0e1b944204668b8eb721674916d4e28744092 \
+    --hash=sha256:5c01fd846263a75bc8a2b9542606927cfad57e7282965d96b93c387622487485 \
+    --hash=sha256:9bef37ee224e104a413f0780e29adb3e514a5b698aabe0d969a6ba426b8435d1 \
+    --hash=sha256:d705f8aeecdf3262379644e4b55107a3b55860eb812b673b28d0fbc347a60c55 \
+    --hash=sha256:c8a116feafdb1f84607cb3b14aa1418424ae71fee131642fc568d21423b51824 \
+    --hash=sha256:e898a0863421650f0bebac8ba40840fc02258ef4714cb7e1fd76b6a6354bda36 \
+    --hash=sha256:f8a7bff6e8664afc4e6c28b983845c5bc14965030e3fb98789734d416af77c4b \
+    --hash=sha256:5c65d2da8c6bce0fca2528f69f44b2f977e06954c8512a952222cea50dad430f
