--- a/NLUmodule/config.yml
+++ b/NLUmodule/config.yml
@@ -3,15 +3,19 @@
 language: en
 
 pipeline: 
-- name: "SpacyNLP"
-- name: "SpacyTokenizer"
-- name: "SpacyFeaturizer"
-- name: "LexicalSyntacticFeaturizer"
-
-- name: "DIETClassifier"
-  epochs: 70
-- name: "CRFEntityExtractor"
-- name: "EntitySynonymMapper"
+  - name: WhitespaceTokenizer
+  - name: RegexFeaturizer
+  - name: LexicalSyntacticFeaturizer
+  - name: CountVectorsFeaturizer
+  - name: CountVectorsFeaturizer
+    analyzer: "char_wb"
+    min_ngram: 1
+    max_ngram: 4
+  - name: DIETClassifier
+    epochs: 100
+  - name: EntitySynonymMapper
+  - name: ResponseSelector
+    epochs: 100
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
