--- a/vue_app/package.json
+++ b/vue_app/package.json
@@ -12,7 +12,11 @@
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "socket.io-client": "^3.0.5",
+    "tripetto-runner-autoscroll": "^5.0.4",
+    "tripetto-runner-foundation": "^6.0.4",
     "vue": "^2.6.11",
     "vue-simple-alert": "^1.1.1",
     "vue-socket.io": "^3.0.10",
